--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.4",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "swagger-ui-express": "^5.0.1"
   }
