--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: any
   flutter_dotenv: ^6.0.0
+  shared_preferences: ^2.1.2 
 
 dev_dependencies:
   flutter_test:
