--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: any
   flutter_dotenv: ^6.0.0
   shared_preferences: ^2.1.2 
+  socket_io_client: ^2.0.0
 
 dev_dependencies:
   flutter_test:
