--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_dotenv: ^6.0.0
   shared_preferences: ^2.1.2 
   socket_io_client: ^2.0.0
+  image_picker: ^1.1.0   # สำหรับเลือกภาพจาก gallery/camera
+  mime: ^1.0.2           # สำหรับตรวจสอบประเภทไฟล์ (MIME type)
+  http_parser: ^4.0.2    # สำหรับกำหนด contentType ตอนอัปโหลด
 
 dev_dependencies:
   flutter_test:
