--- a/backend_node/.env
+++ b/backend_node/.env
@@ -3,3 +3,6 @@ EMAILJS_SERVICE_ID='service_kv4crri'
 EMAILJS_TEMPLATE_ID='template_9dx46lb'
 EMAILJS_USER_ID='AbVCRxlU7tU4PzL6G'
 EMAILJS_ACCESS_TOKEN='BN_BoNVTzIDa963tCiRXe'
+
+# Base URL for the API
+BASE_URL='http://192.168.1.4:4000' 
