--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -35,22 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^1.2.2
+  http: ^1.5.0
   flutter_dotenv: ^6.0.0
-  shared_preferences: ^2.1.2 
+  shared_preferences: ^2.5.3
   socket_io_client: ^3.1.2
   
-  image_picker: ^1.1.0
+  image_picker: ^1.2.0
   mime: ^2.0.0
-  http_parser: ^4.0.2
+  http_parser: ^4.1.2
 
   speech_to_text: ^7.3.0
-  flutter_sound: ^9.2.13
+  flutter_sound: ^9.28.0
   path_provider: ^2.1.5 
+  record: ^6.1.1
 
   permission_handler: ^12.0.1
 
-  flutter_animate: ^4.5.0
+  flutter_animate: ^4.5.2
   intl: ^0.20.2
 
 dev_dependencies:
