--- a/flutter_application_1/ios/Runner/Info.plist
+++ b/flutter_application_1/ios/Runner/Info.plist
@@ -24,10 +24,13 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<!-- โปรเจ็กต์ Flutter ทั่วไปไม่ต้องมี Main storyboard ก็ได้ แต่ถ้าคุณมีอยู่แล้วคงค่าเดิมไว้ได้ -->
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -41,13 +44,19 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	
-	<!-- ใส่ permission ไมโครโฟนตรงนี้ -->
-    <key>NSMicrophoneUsageDescription</key>
-    <string>แอปต้องการเข้าถึงไมโครโฟนเพื่อบันทึกเสียง</string>
+
+	<!-- ====== Permissions (iOS) ====== -->
+	<!-- จำเป็นสำหรับอัดเสียง -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>แอปต้องการเข้าถึงไมโครโฟนเพื่อบันทึกเสียง</string>
+
+	<!-- จำเป็นสำหรับการรู้จำเสียง (speech_to_text / Apple Speech) -->
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>แอปต้องการใช้การรู้จำเสียงเพื่อแปลงเสียงเป็นข้อความ</string>
 </dict>
 </plist>
