--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_application_1
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -36,18 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: any
   flutter_dotenv: ^6.0.0
-  shared_preferences: ^2.1.2 
+  shared_preferences: ^2.1.2
   socket_io_client: ^2.0.0
-  
-  image_picker: ^1.1.0          # สำหรับเลือกภาพจาก gallery/camera
-  mime: ^1.0.2                  # สำหรับตรวจสอบประเภทไฟล์ (MIME type)
-  http_parser: ^4.0.2           # สำหรับกำหนด contentType ตอนอัปโหลด
 
-  speech_to_text: ^7.3.0        # ล่าสุด: 7.3.0 :contentReference[oaicite:0]{index=0}
-  flutter_sound: ^9.2.13        # ล่าสุดในสาย 9.x ยังอยู่ที่ 9.2.13 :contentReference[oaicite:1]{index=1}
-  path_provider: ^2.1.5 
+  image_picker: ^1.1.0 # สำหรับเลือกภาพจาก gallery/camera
+  mime: ^1.0.2 # สำหรับตรวจสอบประเภทไฟล์ (MIME type)
+  http_parser: ^4.0.2 # สำหรับกำหนด contentType ตอนอัปโหลด
 
-  permission_handler: ^11.3.0   # ล่าสุด: 2.1.5 :contentReference[oaicite:2]{index=2}
+  speech_to_text: ^7.3.0 # ล่าสุด: 7.3.0 :contentReference[oaicite:0]{index=0}
+  flutter_sound: ^9.2.13 # ล่าสุดในสาย 9.x ยังอยู่ที่ 9.2.13 :contentReference[oaicite:1]{index=1}
+  path_provider: ^2.1.5
+
+  permission_handler: ^11.3.0 # ล่าสุด: 2.1.5 :contentReference[oaicite:2]{index=2}
 
   flutter_animate: ^4.5.0
 
@@ -67,7 +67,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -80,6 +79,8 @@ flutter:
     - assets/google.png
     - assets/facebook.png
     - assets/apple.png
+    - assets/default_porter_avatar.png
+    - assets/default_nurse_avatar.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
